--- a/app/views/milestones/_milestone.html.erb
+++ b/app/views/milestones/_milestone.html.erb
@@ -1,11 +1,8 @@
 <p>
-	<b>title:</b> <%= milestone.title %>
+	<b>title:</b> <%= milestone.title %> <b>target datetime:</b> <%= milestone.target_datetime %>
 	<br />
 	<b>description:</b> <%= milestone.long_description %>
 	<br />
-	<b>target datetime:</b> <%= milestone.target_datetime %>
-	<br />
-	<b>completed at:</b> <%= milestone.completed_at %>
-	<br />
 	<b>point value:</b> <%= milestone.point_value %>
+	<b>completed at:</b> <%= milestone.completed_at %>
 </p>
