--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,18 @@
 </head>
 <body>
 	<div id="content-wrapper">
-		<div id="header"><div id="logo"></div></div>
+		<div id="header">
+			<div id="logo"></div>
+			<div id="authentication">
+				<% if current_user %>
+					Logged in as <%= current_user.username %>
+					<%= link_to "Log out", logout_path %> or
+				<% else %>
+					<%= link_to "Sign up", signup_path %> or
+					<%= link_to "Log in", login_path %>
+				<% end %>
+			</div>
+		</div>
 		<div id="content">
 			<nav>
 			<ul>
@@ -21,8 +32,18 @@
 			</nav>
 			<div id="content-header">
 				
+				<% flash.each do |key, msg| %>
+				  <%= content_tag :div, msg, :class => "flash_notice", :id => key %>
+				  <script "text/javascript">
+					$(function() {
+					  $('#<%= key %>').hide().fadeIn('slow');
+					});
+				  </script>
+
+				 
+				<% end %>
 				
-				<div id="flash_notice" style="display:none"></div>
+				<div id="flash_notice" class="flash_notice" style="display:none"></div>
 			</div>
 			<div id="content-main">
 			<%= yield %>
