--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Welcome to Educentives!</h1>
 <p>Educentives is about rewarding people for extraordinary effort by making them feel that way</p>
+
+<h3>My Goals</h3>
+<div id="goal-list-cntr">
+	<div>
+		<%= render @goals %>
+	</div>
+</div>
