--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#goal-list-cntr{
+  border: 1px solid #CCCCCC;
+  border-radius: 8px 8px 8px 8px;
+  padding: 10px;
+}
