--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,11 @@
 <body>
 	<div id="content-wrapper">
 		<div id="header">
-			<div id="logo"></div>
+			<div id="logo"><%= link_to raw("<span>Educentives</span>"), root_path, :id => 'home-link' %></div>
 			<div id="authentication">
 				<% if current_user %>
-					Logged in as <%= current_user.username %>
-					<%= link_to "Log out", logout_path %> or
+					&nbsp;Logged in as <%= current_user.username %>
+					<%= link_to "Log out", logout_path %> 
 				<% else %>
 					<%= link_to "Sign up", signup_path %> or
 					<%= link_to "Log in", login_path %>
@@ -24,7 +24,7 @@
 			<nav>
 			<ul>
 				<li><%= link_to "Goals", :controller => :goals, :action => :index %></li>
-				<li><a href="#">another link</a></li>
+				<li><a href="/about">About Educentives</a></li>
 				<li><a href="#">another link</a></li>
 				<li><a href="http://dribbble.com/shots/186151-TwoSIX">Style These</a></li>
 				
@@ -36,7 +36,7 @@
 				  <%= content_tag :div, msg, :class => "flash_notice", :id => key %>
 				  <script "text/javascript">
 					$(function() {
-					  $('#<%= key %>').hide().fadeIn('slow');
+					  $('#<%= key %>').hide().fadeIn('slow').click(function(){$(this).fadeOut()});
 					});
 				  </script>
 
