home page and date picker

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,4 +6,6 @@
   border: 1px solid #CCCCCC;
   border-radius: 8px 8px 8px 8px;
   padding: 10px;
+  background: url("/assets/background/soccer-goal.png") no-repeat scroll right top #FFFFFF;
+  
 }
