--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>
   <title>Source</title>
   <%= stylesheet_link_tag    "application" %>
+  <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/themes/redmond/jquery-ui.css" rel="stylesheet" type= "text/css"></link>
+  
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
