associated user>person>student with plan and wrote some cucumber testages

--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -11,8 +11,10 @@
 </p>
 
 <p>
+  <% if @plan.student %>
   <b>Student:</b>
-  <%= @plan.student_id %>
+  <%= @plan.student.person.first_name %> <%= @plan.student.person.last_name %>
+  <% end %>
 </p>
 
 <p>
