--- a/app/views/goals/show.html.haml
+++ b/app/views/goals/show.html.haml
@@ -1,9 +1,21 @@
 %h3 Goal
 #notice=notice
+
 .record-cntr
+
+  %em The Journey 
   = render @goal
-    
+
+%h3 The Prize
+
+.record-cntr
+  - if @goal.plan.reward
+    = render @goal.plan.reward 
+  - else
+    = link_to 'New Reward', new_reward_path
+
 %h3 Goal Milestones
+
 #milestones.record-cntr
   =render @goal.milestones 
 
