--- a/app/views/reward_photos/show.html.erb
+++ b/app/views/reward_photos/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <b>Url path:</b>
-  <%= @reward_photo.url_path %>
+  <b>Image</b>
+  <%= image_tag @reward_photo.image, :alt => @reward_photo.title %>
 </p>
 
 <p>
