--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -17,6 +17,9 @@
         %li Break it up into achievable milestones 
         %li Commit to your plan and start checking things off!
   - else
-    Please sign up
+    Please 
+    = link_to "Sign up", signup_path 
+    or
+    = link_to "Log in", login_path 
 
 
