--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -1,3 +1,6 @@
+<% content_for(:head) do %>
+<%= javascript_include_tag 'datetimepicker.js' %>
+<% end %>
 <%= form_for(@goal) do |f| %>
   <% if @goal.errors.any? %>
     <div id="error_explanation">
@@ -25,11 +28,13 @@
   </div>
   <div class="field">
     <%= f.label :target_datetime %><br />
-    <%= f.datetime_select :target_datetime, :include_blank => true  %>
+    <%= f.date_select :target_datetime, :include_blank => true %>
+    <%= f.time_select :target_datetime, :include_blank => true, :ignore_blank => true %>
   </div>
   <div class="field">
     <%= f.label :completed_at %><br />
     <%= f.datetime_select :completed_at, :include_blank => true %>
+    <%= f.text_field :completed_at, :class => 'datetimepicker' %>
   </div>
 
   <div class="field">
@@ -40,3 +45,13 @@
     <%= f.submit %>
   </div>
 <% end %>
+<script>
+  $(function() {
+      $('.datetimepicker').datepicker({
+        duration: '',
+          showTime: true,
+          constrainInput: false
+       });
+  });
+</script>
+
