added html5 boilerplate

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -91,7 +91,7 @@ fieldset{
   border-radius: 5px;
 }
 
-fieldset input[type='text'], fieldset textarea{
+fieldset input[type='text'], fieldset input[type='password'], fieldset textarea{
   width:99%;
 }
 
