--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,61 +1,107 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-  <title>Source</title>
-  <%= stylesheet_link_tag    "application" %>
-  <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/themes/redmond/jquery-ui.css" rel="stylesheet" type= "text/css"></link>
-  
-  <%= javascript_include_tag "application" %>
+  <meta charset="utf-8">
+
+  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
+       More info: h5bp.com/i/378 -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <title>+++Educentives+++</title>
+  <meta name="description" content="">
+
+  <!-- Mobile viewport optimized: h5bp.com/viewport -->
+  <meta name="viewport" content="width=device-width">
+
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
+
+  <%= stylesheet_link_tag "application" %>
   <%= csrf_meta_tags %>
+
+  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
+
+  <!-- All JavaScript at the bottom, except this Modernizr build.
+       Modernizr enables HTML5 elements & feature detects for optimal performance.
+       Create your own custom Modernizr build: www.modernizr.com/download/ -->
+  <%= javascript_include_tag 'modernizr' %>
+
+  <!-- Initializes the modernizr and actually perform the checks. Enable this
+       if you need the modernizr, but remember to only do the actual checks
+       that you need. -->
+  <#%= javascript_tag "Modernizr.load();" %>
 </head>
 <body>
-	<div id="content-wrapper">
-		<div id="header">
-			<div id="logo"><%= link_to raw("<span>Educentives</span>"), root_path, :id => 'home-link' %></div>
-			<div id="authentication">
-				<% if current_user %>
-					&nbsp;Logged in as <%= current_user.username %>
-					<%= link_to "Log out", logout_path %> 
-				<% else %>
-					<%= link_to "Sign up", signup_path %> or
-					<%= link_to "Log in", login_path %>
-				<% end %>
-			</div>
-		</div>
-		<div id="content">
-			<nav>
-			<ul>
-				<li><%= link_to "Goals", :controller => :goals, :action => :index %></li>
-				<li><a href="/about">About Educentives</a></li>
-				<li><a href="#">another link</a></li>
-				<li><a href="http://dribbble.com/shots/186151-TwoSIX">Style These</a></li>
-				
-			</ul>
-			</nav>
-			<div id="content-header">
-				
-				<% flash.each do |key, msg| %>
-				  <%= content_tag :div, msg, :class => "flash_notice", :id => key %>
-				  <script "text/javascript">
-					$(function() {
-					  $('#<%= key %>').hide().fadeIn('slow').click(function(){$(this).fadeOut()});
-					});
-				  </script>
+  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
+       chromium.org/developers/how-tos/chrome-frame-getting-started -->
+  <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
-				 
-				<% end %>
-				
-				<div id="flash_notice" class="flash_notice" style="display:none"></div>
-			</div>
-			<div id="content-main">
-			<%= yield %>
-			</div>
-			<div class="clearer"></div>
-			
-		</div>
-		<div id="footer">
-			
-		</div>
-	</div>
+
+  <div id="content-wrapper">
+    <div id="header">
+      <div id="logo"><%= link_to raw("<span>Educentives</span>"), root_path, :id => 'home-link' %></div>
+      <div id="authentication">
+        <% if current_user %>
+          &nbsp;Logged in as <%= current_user.username %>
+          <%= link_to "Log out", logout_path %>
+        <% else %>
+          <%= link_to "Sign up", signup_path %> or
+          <%= link_to "Log in", login_path %>
+        <% end %>
+      </div>
+    </div>
+    <div id="content">
+      <nav>
+      <ul>
+        <li><%= link_to "Goals", :controller => :goals, :action => :index %></li>
+        <li><a href="/about">About Educentives</a></li>
+        <li><a href="#">another link</a></li>
+        <li><a href="http://dribbble.com/shots/186151-TwoSIX">Style These</a></li>
+
+      </ul>
+      </nav>
+      <div id="content-header">
+
+        <% flash.each do |key, msg| %>
+          <%= content_tag :div, msg, :class => "flash_notice", :id => key %>
+          <script "text/javascript">
+          $(function() {
+            $('#<%= key %>').hide().fadeIn('slow').click(function(){$(this).fadeOut()});
+          });
+          </script>
+
+
+        <% end %>
+
+        <div id="flash_notice" class="flash_notice" style="display:none"></div>
+      </div>
+      <div id="content-main">
+      <%= yield %>
+      </div>
+      <div class="clearer"></div>
+
+    </div>
+    <div id="footer">
+
+    </div>
+  </div>
+
+</body>
+  <!-- JavaScript at the bottom for fast page loading: http://developer.yahoo.com/performance/rules.html#js_bottom -->
+  <%= javascript_include_tag 'application' %>
+
+  <% if Rails.env.production? %>
+  <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
+       mathiasbynens.be/notes/async-analytics-snippet -->
+  <script>
+    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+    s.parentNode.insertBefore(g,s)}(document,'script'));
+  </script>
+  <% end %>
 </body>
 </html>
