--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -7,6 +7,7 @@
         = render @goals  
     - else
       Nice to see you here.  I can't wait to get started!  Its simple:
+      = link_to image_tag('lambo.png', :style => 'opacity:0.3;position:absolute;right:40px;top:160px;'), new_goal_path
       %ul
         %li
           %b
