--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
       <nav>
       <ul>
         <li><%= link_to "Goals", :controller => :goals, :action => :index %></li>
-        <li><a href="/about">About Educentives</a></li>
+        <li><%= link_to "About Educentives", about_path %><li>
         <li><a href="#">another link</a></li>
         <li><a href="http://dribbble.com/shots/186151-TwoSIX">Style These</a></li>
 
