--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -307,3 +307,43 @@ a.record-title{
   ul li {
     font-size: 12pt;
     list-style: square; } }
+
+table.meta-data{
+  td, th{
+    padding:5px;
+    margin:1px;
+    background-color:#ffffff;
+  }
+  td{
+    border-top: solid 1px $med-blue;
+    background-color:$light-blue;
+  } 
+
+  tr:first-child{
+    td:first-child, th:first-child {
+      -moz-border-radius-topleft:10px;
+      -webkit-border-top-left-radius:10px;
+      border-top-left-radius:10px;
+    }
+    td:last-child, th:last-child {
+      -moz-border-radius-topright:10px;
+      -webkit-border-top-right-radius:10px;
+      border-top-right-radius:10px;
+    }
+  }
+  tr:last-child{
+    td:first-child, th:first-child {
+      -moz-border-radius-bottomleft:10px;
+      -webkit-border-bottom-left-radius:10px;
+      border-bottom-left-radius:10px;
+    }
+    td:last-child, th:last-child {
+      -moz-border-radius-bottomright:10px;
+      -webkit-border-bottom-right-radius:10px;
+      border-bottom-right-radius:10px;
+    }
+  }
+
+}
+
+
