--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -12,7 +12,7 @@
 
 <h2>Deadlines</h2>
 
-<p>Setting a <i>deadline</i> is the best way to reach your gaol faster.  Life has a way of imposing deadlines on us naturally.  Even when it doesn't, its helpful to up the challenge from zero.</p>
+<p>Setting a <i>deadline</i> is the best way to reach your goal faster.  Life comes at us all at once.  Knowing when you need to accomplish something helps to give some order to things and sort them out.  Its just one way to decide when you should be working on what tasks.  If something is due tomorrow, you're more likely to work on it today.  If something else isn't due until next month, it might not be the best use of your time, right now.</p>
 
 
 <h2>Milestones</h2>
