--- a/app/views/goals/index.html.haml
+++ b/app/views/goals/index.html.haml
@@ -1,23 +1,7 @@
 %h1 Listing goals
 - @goals.each do |goal|
-  %h2
-    = goal.title
-  %p
-    = goal.long_description 
-  %table.meta-data
-    %tr
-      %th points
-      %th due
-      %th completed
-    %tr
-      %td 
-        = goal.point_value 
-      %td
-        = goal.target_datetime 
-      %td
-        = goal.completed_at 
-  %p 
-    = goal.plan_id 
+  .record-cntr
+    = render goal
     = link_to 'Show', goal 
     = link_to 'Edit', edit_goal_path(goal) 
     = link_to 'Destroy', goal, confirm: 'Are you sure?', method: :delete 
