--- a/app/views/rewards/_reward.html.haml
+++ b/app/views/rewards/_reward.html.haml
@@ -5,5 +5,5 @@
     %span.record-label Point Value
     %span.record-value= reward.point_value||'n/a'
   .row
-    = image_tag reward.reward_photo.image if reward.reward_photo
+    = link_to image_tag(reward.reward_photo.image), reward_photo_path(reward.reward_photo) if reward.reward_photo
   
