--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing goal</h1>
-
-<%= render 'form' %>
-
+<fieldset>
+  <%= render 'form' %>
+</fieldset>
 <%= link_to 'Show', @goal %> |
 <%= link_to 'Back', goals_path %>
