--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -25,13 +25,11 @@
   </div>
   <div class="field">
     <%= f.label :target_datetime %><br />
-    <%= f.date_select :target_datetime, :include_blank => true %>
-    <%= f.time_select :target_datetime, :include_blank => true, :ignore_blank => true %>
+    <%= f.text_field :target_datetime, :class => "datetime-field" %>
   </div>
   <div class="field">
     <%= f.label :completed_at %><br />
-    <%= f.datetime_select :completed_at, :include_blank => true %>
-    <%= f.text_field :completed_at, :class => 'datetimepicker' %>
+    <%= f.text_field :completed_at, :class => 'datetime-field' %>
   </div>
 
   <div class="field">
@@ -42,13 +40,4 @@
     <%= f.submit %>
   </div>
 <% end %>
-<script>
-  $(function() {
-      $('.datetimepicker').datepicker({
-        duration: '',
-          showTime: true,
-          constrainInput: false
-       });
-  });
-</script>
 
