--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -7,5 +7,5 @@
   border-radius: 8px 8px 8px 8px;
   padding: 10px;
   background: url("/assets/background/soccer-goal.png") no-repeat scroll right top #FFFFFF;
-  
+  position:relative;
 }
