--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,5 +1,5 @@
 $light-blue: #CEF0FF;
-$med-blue: #74839F;
+$med-blue: #7c9aae;
 $dark-blue: #18204C;
 $label-color: #ccc;
 $right-pane-bg-img: image-url('background/forest-trail-transparent.png');
@@ -39,7 +39,8 @@ h1, h2, h3, h4, h5{
   width:1000px;
   background: $right-pane-bg-img no-repeat scroll bottom right $light-blue;
   border-radius: 10px;
-  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
+  
+  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
   position:relative;}
 
 #content-main{
@@ -63,7 +64,7 @@ h1, h2, h3, h4, h5{
 
 #footer, #header{
 	position:relative;
-	width: 1000px;
+	width: 960px;
 	margin:8px auto;
 	border:solid 1px $light-blue;
 	border-radius: 10px;
@@ -96,12 +97,17 @@ fieldset{
   border-radius: 5px;
 }
 
-fieldset input[type='text'],  fieldset input[type='number'], fieldset input[type='password'], fieldset textarea{
+fieldset input[type='text'], fieldset input[type='number'], fieldset textarea, .wideform textarea, .wideform input[type='text'], input[type='number']{
   width:99%;
+  border: solid 1px $med-blue;
+  border-radius: 4px;
+  line-height:24pt;
+  font-size:14pt;
+  color:$med-blue;
 }
 
-fieldset textarea{
-  height:60px;
+fieldset textarea, .wideform textarea{
+  height:60pt;
 }
 
 pre {
@@ -165,7 +171,7 @@ nav ul{
 	float:right;
 	margin: 5px;
 	padding: 0;
-	width: 348px;
+	width: 309px;
 	list-style-type:none;
 }
 
@@ -206,7 +212,7 @@ nav a{
   padding: 14px 8px;
   text-decoration: none;
   display:block;
-  width: 348px;
+  width: 309px;
 	text-transform:uppercase;
 	letter-spacing:0.2em;
 	text-shadow:1px 1px 0 #fff;
@@ -231,6 +237,76 @@ nav a:hover, #authentication a:hover{
 	background-image:      -o-linear-gradient(top, $light-blue, white, $light-blue, $light-blue);
 	color: $dark-blue;
 }
+
+// button //------------------------------------------------
+
+.edu-button {
+    margin: 10px 15px;
+    
+    background: -webkit-linear-gradient(top , #73B844, #62AC44) repeat scroll 0 0 #62AC44;
+    background:    -moz-linear-gradient(center top , #73B844 50%, #62AC44 100%) repeat scroll 0 0 #62AC44;
+    background:    -moz-linear-gradient(top , #fff, #62AC44) repeat scroll 0 0 #62AC44;
+    background:     -ms-linear-gradient(center top , #73B844 50%, #62AC44 100%) repeat scroll 0 0 #62AC44;
+    background:      -o-linear-gradient(center top , #73B844 50%, #62AC44 100%) repeat scroll 0 0 #62AC44;
+    
+    border: 3px solid #eee;
+    font-size: 26px;
+    padding: 8px 25px;
+    border-radius: 8px;
+    clear: both;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: block;
+    float: right;
+    font-family: Trebuchet MS,arial,sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1.5em;
+    text-decoration: none;
+    text-transform: capitalize;
+    white-space: nowrap !important;
+}
+.edu-button.arrow-left{
+    padding-left: 15px;
+}
+
+.edu-button:link, .edu-button:visited, .edu-button:active, .edu-button:hover {
+    color: #FFFFFF;
+}
+
+.edu-button:hover {
+    background: -moz-linear-gradient(center top , #62AC44 50%, #73B844 100%) repeat scroll 0 0 #73B844;
+}
+.edu-button.cancel {
+    background: -moz-linear-gradient(center top , #999488 50%, #888888 100%) repeat scroll 0 0 #888888;
+    border: 1px solid #888888;
+}
+.edu-button.cancel:hover {
+    background: -moz-linear-gradient(center top , #888888 50%, #999488 100%) repeat scroll 0 0 #999488;
+}
+
+
+.edu-button .icon-32 {
+    margin-right: 5px;
+    margin-top: 4px;
+}
+
+.icon-32.arrow-white-32 {
+    background-position: 0 -64px;
+}
+
+.icon-32 {
+    background: url("/assets/sprites/icons-32.png") no-repeat scroll 0 0 transparent;
+    display: block;
+    float: left;
+    height: 32px;
+    margin-right: 0;
+    overflow: hidden;
+    text-indent: -999em;
+    width: 32px;
+}
+
+
 
 
 
@@ -291,11 +367,21 @@ a.record-title{
 .field_with_errors {
   padding: 2px;
   background-color: red;
-  display: table; }
+  color:#fff;
+  padding:2px;
+}
+
+.field div:first-child .field_with_errors{ 
+  border-radius:5px 5px 0 0;
+  padding:5px 2px 2px 5px;
+}
+  
+.field div:last-child .field_with_errors{ border-radius:0 0 5px 5px;}
 
 #error_explanation {
   width: 450px;
   border: 2px solid red;
+  border-radius:5px;
   padding: 7px;
   padding-bottom: 0;
   margin-bottom: 20px;
@@ -308,7 +394,12 @@ a.record-title{
     margin: -7px;
     margin-bottom: 0px;
     background-color: #c00;
-    color: #fff; }
+    color: #fff; 
+    border-top: 1px solid #800000;
+    border-left: 1px solid #800000;
+    border-radius:3px 3px 0;
+    font-family:helvetica;
+  }
   ul li {
     font-size: 12pt;
     list-style: square; } }
