--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -10,34 +10,36 @@
       </ul>
     </div>
   <% end %>
+  <fieldset>
+    <legend>Goal</legend>
+    <div class="field">
+      <div><%= f.label :title %></div>
+      <div><%= f.text_field :title %></div>
+    </div>
+    <div class="field">
+      <div><%= f.label :long_description %></div>
+      <div><%= f.text_area :long_description %></div>
+    </div>
+    <div class="field">
+      <div><%= f.label :point_value %></div>
+      <div><%= f.number_field :point_value %></div>
+    </div>
+    <div class="field">
+      <div><%= f.label :target_datetime %></div>
+      <div><%= f.datetime_select :target_datetime, :include_blank => true  %></div>
+    </div>
+    <div class="field">
+      <div><%= f.label :completed_at %></div>
+      <div><%= f.datetime_select :completed_at, :include_blank => true %></div>
+    </div>
 
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :long_description %><br />
-    <%= f.text_area :long_description %>
-  </div>
-  <div class="field">
-    <%= f.label :point_value %><br />
-    <%= f.number_field :point_value %>
-  </div>
-  <div class="field">
-    <%= f.label :target_datetime %><br />
-    <%= f.text_field :target_datetime, :class => "datetime-field" %>
-  </div>
-  <div class="field">
-    <%= f.label :completed_at %><br />
-    <%= f.text_field :completed_at, :class => 'datetime-field' %>
-  </div>
-
-  <div class="field">
-    <%= f.label :plan_id %><br />
-    <%= f.number_field :plan_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div class="field">
+      <div><%= f.label :plan_id %></div>
+      <div><%= f.number_field :plan_id %></div>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+  </fieldset>
 <% end %>
 
