--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,7 +11,7 @@
       %ul
         %li
           %b
-            = link_to 'Set your Goal', new_goal_path
+            = link_to 'Set your first Goal', goal_wizard_path
           %small (we'll set a date later)
         %li Find something appropriate to earn as a reward for all that hard work
         %li Break it up into achievable milestones 
