tweaked the display of a reward form

--- a/app/views/goals/wizard_prize.html.haml
+++ b/app/views/goals/wizard_prize.html.haml
@@ -1,5 +1,6 @@
 
-<h1>What reward will you receive when you reach your goal?</h1>
+%h1 What reward will you receive when you reach your goal?
+Consider it a prize for completing the work or an incentive to motivate you forward.  Either way, make sure its a tangeable incentive for you.
 .record-cntr
   = render :partial => 'rewards/form', :locals => {:reward => @goal.plan.reward, :user_context => 'wizard'}
 
